tests/bad/try_member_non_ptr_rhs.oc
/// fail: Cannot use ?. with non-pointer member type i32

struct Foo {
    x: i32
}

def main() {
    let a: &Foo
    let b = a?.x
}